Checked in 01/06/2017 Ticket 209,215,273,283,173

--- a/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="/pages/advisor/activeAdv.xhtml?action=A">
+                    <a href="/pages/advisor/activeAdv.xhtml?action=AA">
                         <div class="Container50">
                             <div class="Wid90 BorderedBox MarAuto TexAlCenter HoverEffect">
                                 <div class="ContainerIndent">
