--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/editaddress.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/editaddress.xhtml
@@ -413,7 +413,7 @@
 					rendered="true">
 					
 				<p:accordionPanel styleClass="tcmAccordionPanel-UI internalTabs Container80 Responsive100 MarCenter">
-					<p:tab title="Old Address Information" styleClass="tcmAccordion-UI">
+					<p:tab activeIndex="" title="Old Address Information" styleClass="tcmAccordion-UI">
 					<div class="EmptyBox10"></div>
 
 					<div class="Container100 Responsive100 MarTop5 MarCenter"
