--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -31,7 +31,7 @@
                         <div class="EmptyBox5"></div>
                         <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft  AddressFieldOnly"
                                      value="#{tdcto.tdMasterData.acctOwnersDetail.physicalAddressStreet}"
-                                     placeholder="Residence Street Address 1"
+                                     placeholder="Residence Street Address"
                                      autocomplete="off" maxlength="50" required="false">
 
                         </p:inputText>
@@ -116,7 +116,7 @@
                         <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
                                      value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressStreet}"
                                      maxlength="50"
-                                     placeholder="Mailing Street Address 1">
+                                     placeholder="Mailing Street Address">
                         </p:inputText>
                         <!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                                       placeholder="Street Address 2">
@@ -217,7 +217,7 @@
                                      value="#{tdcto.tdMasterData.jointAcctOwnersDetail.physicalAddressStreet}"
                                      maxlength="50"
                                      autocomplete="off"
-                                     placeholder="Residence Street Address 1">
+                                     placeholder="Residence Street Address">
                         </p:inputText>
                         <!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                                       placeholder="Street Address 2">
@@ -302,7 +302,7 @@
                             <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
                                          value="#{tdcto.tdMasterData.jointAcctOwnersDetail.mailingAddressStreet}"
                                          maxlength="50"
-                                         placeholder="Mailing Street Address 1">
+                                         placeholder="Mailing Street Address">
                             </p:inputText>
                             <!-- <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                                          placeholder="Street Address 2">
